fix modal not showing

--- a/baby-steps/client/src/family/styles/inviteFamilyMember.css
+++ b/baby-steps/client/src/family/styles/inviteFamilyMember.css
@@ -8,6 +8,7 @@
   width: 400px;
   max-width: 100%;
   z-index: 1010;
+  display: block;
 }
 
 .modalBody {
